--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,196 @@
     <title>Home</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/main.css" />
-    <script src="./main.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body class="">
-  
-
+    <div id="map"></div>
+    <div class="left-menu">
+        <div class="menu-search">
+            <div class="icon show-in-searching">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path
+                        d="M7.33333 2.5C4.66396 2.5 2.5 4.66396 2.5 7.33333C2.5 10.0027 4.66396 12.1667 7.33333 12.1667C10.0027 12.1667 12.1667 10.0027 12.1667 7.33333C12.1667 4.66396 10.0027 2.5 7.33333 2.5ZM1.5 7.33333C1.5 4.11167 4.11167 1.5 7.33333 1.5C10.555 1.5 13.1667 4.11167 13.1667 7.33333C13.1667 10.555 10.555 13.1667 7.33333 13.1667C4.11167 13.1667 1.5 10.555 1.5 7.33333Z" />
+                    <path
+                        d="M10.9799 10.9795C11.1752 10.7842 11.4918 10.7842 11.687 10.9795L13.687 12.9795C13.8823 13.1747 13.8823 13.4913 13.687 13.6866C13.4918 13.8818 13.1752 13.8818 12.9799 13.6866L10.9799 11.6866C10.7847 11.4913 10.7847 11.1747 10.9799 10.9795Z" />
+                </svg>
+            </div>
+            <div class="icon hide-in-searching">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path
+                        d="M2 10.833L14 10.833C14.2733 10.833 14.5 11.0597 14.5 11.333C14.5 11.6063 14.2733 11.833 14 11.833L2 11.833C1.72667 11.833 1.5 11.6063 1.5 11.333C1.5 11.0597 1.72667 10.833 2 10.833Z" />
+                    <path
+                        d="M2 7.5L14 7.5C14.2733 7.5 14.5 7.72667 14.5 8C14.5 8.27333 14.2733 8.5 14 8.5L2 8.5C1.72667 8.5 1.5 8.27333 1.5 8C1.5 7.72667 1.72667 7.5 2 7.5Z" />
+                    <path
+                        d="M2 4.16699L14 4.16699C14.2733 4.16699 14.5 4.39366 14.5 4.66699C14.5 4.94033 14.2733 5.16699 14 5.16699L2 5.16699C1.72667 5.16699 1.5 4.94032 1.5 4.66699C1.5 4.39366 1.72667 4.16699 2 4.16699Z" />
+                </svg>
+            </div>
+            <input id="search" placeholder="Tìm kiếm" autocomplete="off">
+            <div class="icon hide-in-searching">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path
+                        d="M7.33333 2.5C4.66396 2.5 2.5 4.66396 2.5 7.33333C2.5 10.0027 4.66396 12.1667 7.33333 12.1667C10.0027 12.1667 12.1667 10.0027 12.1667 7.33333C12.1667 4.66396 10.0027 2.5 7.33333 2.5ZM1.5 7.33333C1.5 4.11167 4.11167 1.5 7.33333 1.5C10.555 1.5 13.1667 4.11167 13.1667 7.33333C13.1667 10.555 10.555 13.1667 7.33333 13.1667C4.11167 13.1667 1.5 10.555 1.5 7.33333Z" />
+                    <path
+                        d="M10.9799 10.9795C11.1752 10.7842 11.4918 10.7842 11.687 10.9795L13.687 12.9795C13.8823 13.1747 13.8823 13.4913 13.687 13.6866C13.4918 13.8818 13.1752 13.8818 12.9799 13.6866L10.9799 11.6866C10.7847 11.4913 10.7847 11.1747 10.9799 10.9795Z" />
+                </svg>
+            </div>
+            <div class="icon show-in-searching active">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path
+                        d="M2.5 8C2.5 7.72386 2.72386 7.5 3 7.5H12C12.2761 7.5 12.5 7.72386 12.5 8C12.5 8.27614 12.2761 8.5 12 8.5H3C2.72386 8.5 2.5 8.27614 2.5 8Z" />
+                    <path
+                        d="M7.64645 3.64645C7.84171 3.45118 8.15829 3.45118 8.35355 3.64645L12.3536 7.64645C12.5488 7.84171 12.5488 8.15829 12.3536 8.35355L8.35355 12.3536C8.15829 12.5488 7.84171 12.5488 7.64645 12.3536C7.45118 12.1583 7.45118 11.8417 7.64645 11.6464L11.2929 8L7.64645 4.35355C7.45118 4.15829 7.45118 3.84171 7.64645 3.64645Z" />
+                </svg>
+            </div>
+        </div>
+        <div class="main-popup active">
+            <div class="tab-icon-line">
+                <div class="tab active">
+                    <div class="line-transperent"></div>
+                    <div class="icon">
+                        <svg class="icon-svg" viewBox="0 0 16 16">
+                            <path
+                                d="M2 10.833L14 10.833C14.2733 10.833 14.5 11.0597 14.5 11.333C14.5 11.6063 14.2733 11.833 14 11.833L2 11.833C1.72667 11.833 1.5 11.6063 1.5 11.333C1.5 11.0597 1.72667 10.833 2 10.833Z" />
+                            <path
+                                d="M2 7.5L14 7.5C14.2733 7.5 14.5 7.72667 14.5 8C14.5 8.27333 14.2733 8.5 14 8.5L2 8.5C1.72667 8.5 1.5 8.27333 1.5 8C1.5 7.72667 1.72667 7.5 2 7.5Z" />
+                            <path
+                                d="M2 4.16699L14 4.16699C14.2733 4.16699 14.5 4.39366 14.5 4.66699C14.5 4.94033 14.2733 5.16699 14 5.16699L2 5.16699C1.72667 5.16699 1.5 4.94032 1.5 4.66699C1.5 4.39366 1.72667 4.16699 2 4.16699Z" />
+                        </svg>
+                    </div>
+                    <div class="line-status"></div>
+                </div>
+                <div class="tab">
+                    <div class="line-transperent"></div>
+                    <div class="icon">
+                        <svg class="icon-svg" viewBox="0 0 16 16">
+                            <path
+                                d="M2 10.833L14 10.833C14.2733 10.833 14.5 11.0597 14.5 11.333C14.5 11.6063 14.2733 11.833 14 11.833L2 11.833C1.72667 11.833 1.5 11.6063 1.5 11.333C1.5 11.0597 1.72667 10.833 2 10.833Z" />
+                            <path
+                                d="M2 7.5L14 7.5C14.2733 7.5 14.5 7.72667 14.5 8C14.5 8.27333 14.2733 8.5 14 8.5L2 8.5C1.72667 8.5 1.5 8.27333 1.5 8C1.5 7.72667 1.72667 7.5 2 7.5Z" />
+                            <path
+                                d="M2 4.16699L14 4.16699C14.2733 4.16699 14.5 4.39366 14.5 4.66699C14.5 4.94033 14.2733 5.16699 14 5.16699L2 5.16699C1.72667 5.16699 1.5 4.94032 1.5 4.66699C1.5 4.39366 1.72667 4.16699 2 4.16699Z" />
+                        </svg>
+                    </div>
+                    <div class="line-status"></div>
+                </div>
+                <div class="tab space">
+                    <div class="line-transperent"></div>
+                    <div class="icon">
+                        <svg class="icon-svg" viewBox="0 0 16 16">
+                            <path
+                                d="M2 10.833L14 10.833C14.2733 10.833 14.5 11.0597 14.5 11.333C14.5 11.6063 14.2733 11.833 14 11.833L2 11.833C1.72667 11.833 1.5 11.6063 1.5 11.333C1.5 11.0597 1.72667 10.833 2 10.833Z" />
+                            <path
+                                d="M2 7.5L14 7.5C14.2733 7.5 14.5 7.72667 14.5 8C14.5 8.27333 14.2733 8.5 14 8.5L2 8.5C1.72667 8.5 1.5 8.27333 1.5 8C1.5 7.72667 1.72667 7.5 2 7.5Z" />
+                            <path
+                                d="M2 4.16699L14 4.16699C14.2733 4.16699 14.5 4.39366 14.5 4.66699C14.5 4.94033 14.2733 5.16699 14 5.16699L2 5.16699C1.72667 5.16699 1.5 4.94032 1.5 4.66699C1.5 4.39366 1.72667 4.16699 2 4.16699Z" />
+                        </svg>
+                    </div>
+                    <div class="line-status"></div>
+                </div>
+                <div class="tab toggle-panel">
+                    <div class="line-transperent"></div>
+                    <div class="icon">
+                        <svg class="icon-svg" viewBox="0 0 16 16">
+                            <path d="M3.64645 9.85355C3.45118 9.65829 3.45118 9.34171 3.64645 9.14645L7.64645 5.14645C7.84171 4.95118 8.15829 4.95118 8.35355 5.14645L12.3536 9.14645C12.5488 9.34171 12.5488 9.65829 12.3536 9.85355C12.1583 10.0488 11.8417 10.0488 11.6464 9.85355L8 6.20711L4.35355 9.85355C4.15829 10.0488 3.84171 10.0488 3.64645 9.85355Z"/>
+                        </svg>
+                    </div>
+                    <div class="line-status"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="filter">
+        <div class="tab-icon-text icon-toggle active">
+            <svg class="icon-svg" viewBox="0 0 16 16">
+                <path
+                    d="M8 3.25C8.41421 3.25 8.75 3.58579 8.75 4V7.25H12C12.4142 7.25 12.75 7.58579 12.75 8C12.75 8.41421 12.4142 8.75 12 8.75H8.75V12C8.75 12.4142 8.41421 12.75 8 12.75C7.58579 12.75 7.25 12.4142 7.25 12V8.75H4C3.58579 8.75 3.25 8.41421 3.25 8C3.25 7.58579 3.58579 7.25 4 7.25H7.25V4C7.25 3.58579 7.58579 3.25 8 3.25Z" />
+            </svg>
+            <div>Trạm</div>
+        </div>
+        <div class="tab-icon-text icon-toggle active">
+            <svg class="icon-svg" viewBox="0 0 16 16">
+                <path
+                    d="M8 3.25C8.41421 3.25 8.75 3.58579 8.75 4V7.25H12C12.4142 7.25 12.75 7.58579 12.75 8C12.75 8.41421 12.4142 8.75 12 8.75H8.75V12C8.75 12.4142 8.41421 12.75 8 12.75C7.58579 12.75 7.25 12.4142 7.25 12V8.75H4C3.58579 8.75 3.25 8.41421 3.25 8C3.25 7.58579 3.58579 7.25 4 7.25H7.25V4C7.25 3.58579 7.58579 3.25 8 3.25Z" />
+            </svg>
+            <div>Vệ tinh</div>
+        </div>
+        <div class="tab-icon-text icon-toggle">
+            <svg class="icon-svg" viewBox="0 0 16 16">
+                <path
+                    d="M8 3.25C8.41421 3.25 8.75 3.58579 8.75 4V7.25H12C12.4142 7.25 12.75 7.58579 12.75 8C12.75 8.41421 12.4142 8.75 12 8.75H8.75V12C8.75 12.4142 8.41421 12.75 8 12.75C7.58579 12.75 7.25 12.4142 7.25 12V8.75H4C3.58579 8.75 3.25 8.41421 3.25 8C3.25 7.58579 3.58579 7.25 4 7.25H7.25V4C7.25 3.58579 7.58579 3.25 8 3.25Z" />
+            </svg>
+            <div>WRF</div>
+        </div>
+    </div>
+    <div class="map-control">
+        <div class="zoom-control">
+            <div class="icon">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path
+                        d="M4.3335 1.8335C2.94964 1.8335 1.8335 2.94964 1.8335 4.3335V6.00016C1.8335 6.2763 1.60964 6.50016 1.3335 6.50016C1.05735 6.50016 0.833496 6.2763 0.833496 6.00016V4.3335C0.833496 2.39735 2.39735 0.833496 4.3335 0.833496H6.00016C6.2763 0.833496 6.50016 1.05735 6.50016 1.3335C6.50016 1.60964 6.2763 1.8335 6.00016 1.8335H4.3335Z" />
+                    <path
+                        d="M9.5 1.3335C9.5 1.05735 9.72386 0.833496 10 0.833496H11.6667C13.6028 0.833496 15.1667 2.39735 15.1667 4.3335V6.00016C15.1667 6.2763 14.9428 6.50016 14.6667 6.50016C14.3905 6.50016 14.1667 6.2763 14.1667 6.00016V4.3335C14.1667 2.94964 13.0505 1.8335 11.6667 1.8335H10C9.72386 1.8335 9.5 1.60964 9.5 1.3335Z" />
+                    <path
+                        d="M14.6665 10.1665C14.9426 10.1665 15.1665 10.3904 15.1665 10.6665V11.6665C15.1665 13.6026 13.6026 15.1665 11.6665 15.1665H10.6665C10.3904 15.1665 10.1665 14.9426 10.1665 14.6665C10.1665 14.3904 10.3904 14.1665 10.6665 14.1665H11.6665C13.0504 14.1665 14.1665 13.0504 14.1665 11.6665V10.6665C14.1665 10.3904 14.3904 10.1665 14.6665 10.1665Z" />
+                    <path
+                        d="M1.3335 9.5C1.60964 9.5 1.8335 9.72386 1.8335 10V11.6667C1.8335 13.0505 2.94964 14.1667 4.3335 14.1667H6.00016C6.2763 14.1667 6.50016 14.3905 6.50016 14.6667C6.50016 14.9428 6.2763 15.1667 6.00016 15.1667H4.3335C2.39735 15.1667 0.833496 13.6028 0.833496 11.6667V10C0.833496 9.72386 1.05735 9.5 1.3335 9.5Z" />
+                </svg>
+            </div>
+            <div class="icon">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path
+                        d="M3.5 8C3.5 7.72386 3.72386 7.5 4 7.5H12C12.2761 7.5 12.5 7.72386 12.5 8C12.5 8.27614 12.2761 8.5 12 8.5H4C3.72386 8.5 3.5 8.27614 3.5 8Z" />
+                    <path
+                        d="M8 3.5C8.27614 3.5 8.5 3.72386 8.5 4L8.5 12C8.5 12.2761 8.27614 12.5 8 12.5C7.72386 12.5 7.5 12.2761 7.5 12L7.5 4C7.5 3.72386 7.72386 3.5 8 3.5Z" />
+                </svg>
+            </div>
+            <div class="icon">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path
+                        d="M3.5 8C3.5 7.72386 3.72386 7.5 4 7.5H12C12.2761 7.5 12.5 7.72386 12.5 8C12.5 8.27614 12.2761 8.5 12 8.5H4C3.72386 8.5 3.5 8.27614 3.5 8Z" />
+                </svg>
+            </div>
+        </div>
+        <div class="infor-control">
+            <div class="icon">
+                <svg class="icon-svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M15.1665 8.00033C15.1665 4.04699 11.9532 0.833658 7.99984 0.833658C4.04651 0.833657 0.833171 4.04699 0.833171 8.00032C0.83317 11.9537 4.0465 15.167 7.99984 15.167C11.9532 15.167 15.1665 11.9537 15.1665 8.00033ZM14.1665 8.00033C14.1665 11.4003 11.3998 14.167 7.99984 14.167C4.59984 14.167 1.83317 11.4003 1.83317 8.00032C1.83317 4.60032 4.59984 1.83366 7.99984 1.83366C11.3998 1.83366 14.1665 4.60033 14.1665 8.00033Z" />
+                    <path
+                        d="M8 6.83366C8.27333 6.83366 8.5 7.06033 8.5 7.33366L8.5 10.667C8.5 10.9403 8.27333 11.167 8 11.167C7.72667 11.167 7.5 10.9403 7.5 10.667L7.5 7.33366C7.5 7.06033 7.72667 6.83366 8 6.83366Z" />
+                    <path
+                        d="M7.99984 4.66756C8.0865 4.66756 8.17317 4.68756 8.25317 4.72089C8.33317 4.75423 8.4065 4.80089 8.47317 4.86089C8.53317 4.92756 8.57984 4.99423 8.61317 5.08089C8.6465 5.16089 8.6665 5.24756 8.6665 5.33423C8.6665 5.42089 8.6465 5.50756 8.61317 5.58756C8.57984 5.66756 8.53317 5.74089 8.47317 5.80756C8.4065 5.86756 8.33317 5.91423 8.25317 5.94756C8.09317 6.01423 7.9065 6.01423 7.7465 5.94756C7.6665 5.91423 7.59317 5.86756 7.5265 5.80756C7.4665 5.74089 7.41984 5.66756 7.3865 5.58756C7.35317 5.50756 7.33317 5.42089 7.33317 5.33423C7.33317 5.24756 7.35317 5.16089 7.3865 5.08089C7.41984 4.99423 7.4665 4.92756 7.5265 4.86089C7.59317 4.80089 7.6665 4.75423 7.7465 4.72089C7.8265 4.68756 7.91317 4.66756 7.99984 4.66756Z" />
+                </svg>
+            </div>
+        </div>
+    </div>
+    <div class="time-slider"></div>
+    <script src="./main.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".icon-toggle,.tab").click(function (e) {
+                e.preventDefault();
+                $(this).toggleClass("active");
+            });
+            $(".toggle-panel").click(function (e) {
+                e.preventDefault();
+                $(".main-popup").toggleClass("active");
+            });
+        });
+        $("#search").focus(function () {
+            $(".show-in-searching").addClass("show-search");
+            $(".hide-in-searching").addClass("hide-search");
+        });
+        $("#search").focusout(function () {
+            $(".show-in-searching").removeClass("show-search");
+            $(".hide-in-searching").removeClass("hide-search");
+        });
+    </script>
 </body>
 
 </html>
