--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/main.css" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -100,7 +105,8 @@
                     <div class="line-transperent"></div>
                     <div class="icon">
                         <svg class="icon-svg" viewBox="0 0 16 16">
-                            <path d="M3.64645 9.85355C3.45118 9.65829 3.45118 9.34171 3.64645 9.14645L7.64645 5.14645C7.84171 4.95118 8.15829 4.95118 8.35355 5.14645L12.3536 9.14645C12.5488 9.34171 12.5488 9.65829 12.3536 9.85355C12.1583 10.0488 11.8417 10.0488 11.6464 9.85355L8 6.20711L4.35355 9.85355C4.15829 10.0488 3.84171 10.0488 3.64645 9.85355Z"/>
+                            <path
+                                d="M3.64645 9.85355C3.45118 9.65829 3.45118 9.34171 3.64645 9.14645L7.64645 5.14645C7.84171 4.95118 8.15829 4.95118 8.35355 5.14645L12.3536 9.14645C12.5488 9.34171 12.5488 9.65829 12.3536 9.85355C12.1583 10.0488 11.8417 10.0488 11.6464 9.85355L8 6.20711L4.35355 9.85355C4.15829 10.0488 3.84171 10.0488 3.64645 9.85355Z" />
                         </svg>
                     </div>
                     <div class="line-status"></div>
