--- a/Index.html
+++ b/Index.html
@@ -120,8 +120,6 @@
                         <div>Lấy từ Trung tâm quan trắc miền bắc</div>
 
                     </div>
-                </div>
-                <div class="card-1">
                     <div class="title-tab-expand">
                         <div class="icon non-interactive">
                             <svg viewBox="0 0 12 12">
@@ -302,21 +300,31 @@
                 <div class="card-1 scroll-in-table">
                     <div class="title">
                         <div>Bảng xếp hạng</div>
-                        <div class="icon">
+                        <!-- <div class="icon">
                             <svg class="icon-svg" viewBox="0 0 16 16">
                                 <path
                                     d="M7.33333 2.5C4.66396 2.5 2.5 4.66396 2.5 7.33333C2.5 10.0027 4.66396 12.1667 7.33333 12.1667C10.0027 12.1667 12.1667 10.0027 12.1667 7.33333C12.1667 4.66396 10.0027 2.5 7.33333 2.5ZM1.5 7.33333C1.5 4.11167 4.11167 1.5 7.33333 1.5C10.555 1.5 13.1667 4.11167 13.1667 7.33333C13.1667 10.555 10.555 13.1667 7.33333 13.1667C4.11167 13.1667 1.5 10.555 1.5 7.33333Z" />
                                 <path
                                     d="M10.9799 10.9795C11.1752 10.7842 11.4918 10.7842 11.687 10.9795L13.687 12.9795C13.8823 13.1747 13.8823 13.4913 13.687 13.6866C13.4918 13.8818 13.1752 13.8818 12.9799 13.6866L10.9799 11.6866C10.7847 11.4913 10.7847 11.1747 10.9799 10.9795Z" />
                             </svg>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="discription">
                         <div>Địa điểm đã lưu:</div>
                     </div>
                     <div class="pin-location">
                         <div class="card-5">
-                            <div class="location-name">Hai Phong</div>
+                            <div class="location-name">
+                                <div>
+                                    Hai Phong
+                                </div>
+                                <div class="icon non-interactive">
+                                    <svg  width="12" height="12" viewBox="0 0 18 18" >
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 2.29289C16.0976 2.68342 16.0976 3.31658 15.7071 3.70711L3.70711 15.7071C3.31658 16.0976 2.68342 16.0976 2.29289 15.7071C1.90237 15.3166 1.90237 14.6834 2.29289 14.2929L14.2929 2.29289C14.6834 1.90237 15.3166 1.90237 15.7071 2.29289Z"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 15.7071C15.3166 16.0976 14.6834 16.0976 14.2929 15.7071L2.29289 3.70711C1.90237 3.31658 1.90237 2.68342 2.29289 2.29289C2.68342 1.90237 3.31658 1.90237 3.70711 2.29289L15.7071 14.2929C16.0976 14.6834 16.0976 15.3166 15.7071 15.7071Z" />
+                                    </svg>
+                                </div>
+                            </div>
                             <div class="infor">
                                 <div class="no">#21</div>
                                 <div class="aqi-number">AQI: 21</div>
@@ -404,11 +412,38 @@
                                     </div>
                                 </div>
                                 <div class="col-56 item justify-end">
-                                    <div class="tab-icon-text active">
+                                    <div class="tab-icon-text green-bg">
                                         <div>92</div>
                                     </div>
                                 </div>
+                                <div class="col-56 green-style-text item justify-end ">
+                                    <svg width="16" height="16" viewBox="0 0 14 14">
+                                        <path
+                                            d="M9.64237 6.58019C9.47151 6.75105 9.1945 6.75105 9.02365 6.58019L6.99967 4.55622L4.9757 6.58019C4.80485 6.75105 4.52784 6.75105 4.35698 6.58019C4.18613 6.40934 4.18613 6.13233 4.35698 5.96147L6.69031 3.62814C6.86117 3.45729 7.13818 3.45729 7.30903 3.62814L9.64237 5.96147C9.81322 6.13233 9.81322 6.40934 9.64237 6.58019Z" />
+                                        <path
+                                            d="M7 3.9375C7.24162 3.9375 7.4375 4.13338 7.4375 4.375L7.4375 9.33333C7.4375 9.57496 7.24162 9.77083 7 9.77083C6.75837 9.77083 6.5625 9.57496 6.5625 9.33333L6.5625 4.375C6.5625 4.13338 6.75838 3.9375 7 3.9375Z" />
+                                    </svg>
+                                    <div>6.1</div>
+                                </div>
+                            </div>
+                            <div class="row-table">
+                                <div class="item col-32">21</div>
+                                <div class="flex-1">
+                                    <div class="icon active">
+                                        <svg class="icon-svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                            <path xmlns="http://www.w3.org/2000/svg" d="M10.3179 3C10.3743 2.9999 10.4302 3.01093 10.4824 3.03245C10.5346 3.05397 10.582 3.08556 10.622 3.12542L14.8742 7.37779C14.9548 7.45834 15 7.56758 15 7.68147C15 7.79537 14.9548 7.9046 14.8742 7.98515C14.4619 8.39751 13.9534 8.49028 13.5831 8.49028C13.4311 8.49028 13.2953 8.47482 13.1879 8.45678L10.4957 11.1491C10.5666 11.4347 10.6126 11.7258 10.6332 12.0193C10.6727 12.6224 10.6057 13.4686 10.0146 14.0596C9.9341 14.1401 9.82487 14.1854 9.71098 14.1854C9.59708 14.1854 9.48785 14.1401 9.40731 14.0596L6.97708 11.6302L4.24361 14.3637C4.0761 14.5312 3.19644 15.1386 3.02893 14.9711C2.86142 14.8036 3.46876 13.923 3.63627 13.7564L6.36974 11.0228L3.94037 8.59251C3.85985 8.51196 3.81462 8.40273 3.81462 8.28883C3.81462 8.17494 3.85985 8.0657 3.94037 7.98515C4.53139 7.39412 5.37755 7.32625 5.98059 7.36663C6.27409 7.38719 6.56525 7.43318 6.8508 7.50408L9.54304 4.81263C9.52056 4.68181 9.50907 4.54934 9.50867 4.4166C9.50867 4.0472 9.60145 3.53863 10.0146 3.12542C10.0951 3.04513 10.2042 3.00002 10.3179 3V3Z"/>
+                                        </svg>
+                                    </div>
+                                    <div>
+                                        TP. Ho Chi Minh
+                                    </div>
+                                </div>
                                 <div class="col-56 item justify-end">
+                                    <div class="tab-icon-text green-bg">
+                                        <div>92</div>
+                                    </div>
+                                </div>
+                                <div class="col-56 green-style-text item justify-end ">
                                     <svg width="16" height="16" viewBox="0 0 14 14">
                                         <path
                                             d="M9.64237 6.58019C9.47151 6.75105 9.1945 6.75105 9.02365 6.58019L6.99967 4.55622L4.9757 6.58019C4.80485 6.75105 4.52784 6.75105 4.35698 6.58019C4.18613 6.40934 4.18613 6.13233 4.35698 5.96147L6.69031 3.62814C6.86117 3.45729 7.13818 3.45729 7.30903 3.62814L9.64237 5.96147C9.81322 6.13233 9.81322 6.40934 9.64237 6.58019Z" />
