--- a/Index.html
+++ b/Index.html
@@ -118,8 +118,8 @@
                     <div class="title">Điểm đang chọn </div>
                     <div class="discription">
                         <div>Lấy từ Trung tâm quan trắc miền bắc</div>
-
                     </div>
+                    <div class="margin-F"></div>
                     <div class="title-tab-expand">
                         <div class="icon non-interactive">
                             <svg viewBox="0 0 12 12">
@@ -312,6 +312,7 @@
                     <div class="discription">
                         <div>Địa điểm đã lưu:</div>
                     </div>
+                    
                     <div class="pin-location">
                         <div class="card-5">
                             <div class="location-name">
@@ -331,35 +332,85 @@
                             </div>
                         </div>
                         <div class="card-5">
-                            <div class="location-name">Nam Dinh</div>
+                            <div class="location-name">
+                                <div>
+                                    Hai Phong
+                                </div>
+                                <div class="icon non-interactive">
+                                    <svg  width="12" height="12" viewBox="0 0 18 18" >
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 2.29289C16.0976 2.68342 16.0976 3.31658 15.7071 3.70711L3.70711 15.7071C3.31658 16.0976 2.68342 16.0976 2.29289 15.7071C1.90237 15.3166 1.90237 14.6834 2.29289 14.2929L14.2929 2.29289C14.6834 1.90237 15.3166 1.90237 15.7071 2.29289Z"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 15.7071C15.3166 16.0976 14.6834 16.0976 14.2929 15.7071L2.29289 3.70711C1.90237 3.31658 1.90237 2.68342 2.29289 2.29289C2.68342 1.90237 3.31658 1.90237 3.70711 2.29289L15.7071 14.2929C16.0976 14.6834 16.0976 15.3166 15.7071 15.7071Z" />
+                                    </svg>
+                                </div>
+                            </div>
                             <div class="infor">
                                 <div class="no">#21</div>
                                 <div class="aqi-number">AQI: 21</div>
                             </div>
                         </div>
                         <div class="card-5">
-                            <div class="location-name">Ha Noi</div>
+                            <div class="location-name">
+                                <div>
+                                    Hai Phong
+                                </div>
+                                <div class="icon non-interactive">
+                                    <svg  width="12" height="12" viewBox="0 0 18 18" >
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 2.29289C16.0976 2.68342 16.0976 3.31658 15.7071 3.70711L3.70711 15.7071C3.31658 16.0976 2.68342 16.0976 2.29289 15.7071C1.90237 15.3166 1.90237 14.6834 2.29289 14.2929L14.2929 2.29289C14.6834 1.90237 15.3166 1.90237 15.7071 2.29289Z"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 15.7071C15.3166 16.0976 14.6834 16.0976 14.2929 15.7071L2.29289 3.70711C1.90237 3.31658 1.90237 2.68342 2.29289 2.29289C2.68342 1.90237 3.31658 1.90237 3.70711 2.29289L15.7071 14.2929C16.0976 14.6834 16.0976 15.3166 15.7071 15.7071Z" />
+                                    </svg>
+                                </div>
+                            </div>
                             <div class="infor">
                                 <div class="no">#21</div>
                                 <div class="aqi-number">AQI: 21</div>
                             </div>
                         </div>
                         <div class="card-5">
-                            <div class="location-name">Thái Nguyên</div>
+                            <div class="location-name">
+                                <div>
+                                    Hai Phong
+                                </div>
+                                <div class="icon non-interactive">
+                                    <svg  width="12" height="12" viewBox="0 0 18 18" >
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 2.29289C16.0976 2.68342 16.0976 3.31658 15.7071 3.70711L3.70711 15.7071C3.31658 16.0976 2.68342 16.0976 2.29289 15.7071C1.90237 15.3166 1.90237 14.6834 2.29289 14.2929L14.2929 2.29289C14.6834 1.90237 15.3166 1.90237 15.7071 2.29289Z"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 15.7071C15.3166 16.0976 14.6834 16.0976 14.2929 15.7071L2.29289 3.70711C1.90237 3.31658 1.90237 2.68342 2.29289 2.29289C2.68342 1.90237 3.31658 1.90237 3.70711 2.29289L15.7071 14.2929C16.0976 14.6834 16.0976 15.3166 15.7071 15.7071Z" />
+                                    </svg>
+                                </div>
+                            </div>
                             <div class="infor">
                                 <div class="no">#21</div>
                                 <div class="aqi-number">AQI: 21</div>
                             </div>
                         </div>
                         <div class="card-5">
-                            <div class="location-name">Thái Nguyên</div>
+                            <div class="location-name">
+                                <div>
+                                    Hai Phong
+                                </div>
+                                <div class="icon non-interactive">
+                                    <svg  width="12" height="12" viewBox="0 0 18 18" >
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 2.29289C16.0976 2.68342 16.0976 3.31658 15.7071 3.70711L3.70711 15.7071C3.31658 16.0976 2.68342 16.0976 2.29289 15.7071C1.90237 15.3166 1.90237 14.6834 2.29289 14.2929L14.2929 2.29289C14.6834 1.90237 15.3166 1.90237 15.7071 2.29289Z"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 15.7071C15.3166 16.0976 14.6834 16.0976 14.2929 15.7071L2.29289 3.70711C1.90237 3.31658 1.90237 2.68342 2.29289 2.29289C2.68342 1.90237 3.31658 1.90237 3.70711 2.29289L15.7071 14.2929C16.0976 14.6834 16.0976 15.3166 15.7071 15.7071Z" />
+                                    </svg>
+                                </div>
+                            </div>
                             <div class="infor">
                                 <div class="no">#21</div>
                                 <div class="aqi-number">AQI: 21</div>
                             </div>
                         </div>
                         <div class="card-5">
-                            <div class="location-name">Thái Nguyên</div>
+                            <div class="location-name">
+                                <div>
+                                    Hai Phong
+                                </div>
+                                <div class="icon non-interactive">
+                                    <svg  width="12" height="12" viewBox="0 0 18 18" >
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 2.29289C16.0976 2.68342 16.0976 3.31658 15.7071 3.70711L3.70711 15.7071C3.31658 16.0976 2.68342 16.0976 2.29289 15.7071C1.90237 15.3166 1.90237 14.6834 2.29289 14.2929L14.2929 2.29289C14.6834 1.90237 15.3166 1.90237 15.7071 2.29289Z"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 15.7071C15.3166 16.0976 14.6834 16.0976 14.2929 15.7071L2.29289 3.70711C1.90237 3.31658 1.90237 2.68342 2.29289 2.29289C2.68342 1.90237 3.31658 1.90237 3.70711 2.29289L15.7071 14.2929C16.0976 14.6834 16.0976 15.3166 15.7071 15.7071Z" />
+                                    </svg>
+                                </div>
+                            </div>
                             <div class="infor">
                                 <div class="no">#21</div>
                                 <div class="aqi-number">AQI: 21</div>
