--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="main-popup active" data-aos="fade-right" data-aos-delay="150">
             <div class="tab-icon-line">
-                <div id="tab2" class="tab active">
+                <div id="tab2" class="tab ">
                     <div class="line-transperent"></div>
                     <div class="icon">
                         <svg class="icon-svg" viewBox="0 0 16 16" fill="none">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="line-status"></div>
                 </div>
-                <div id="tab1" class="tab ">
+                <div id="tab1" class="tab active ">
                     <div class="line-transperent"></div>
                     <div class="icon">
                         <svg class="icon-svg" viewBox="0 0 16 16" fill="none">
@@ -85,6 +85,7 @@
                     </div>
                     <div class="line-status"></div>
                 </div>
+
                 <div class="tab space">
                     <div class="line-transperent"></div>
                     <div class="icon">
@@ -116,7 +117,7 @@
                     <div class="discription">
                         <div>Lấy từ Trung tâm quan trắc miền bắc</div>
                     </div>
-                    <div class="margin-F"></div>
+                    <div class="margin-H"></div>
                     <div class="title-tab-expand">
                         <div class="icon non-interactive">
                             <svg viewBox="0 0 12 12">
@@ -160,7 +161,7 @@
                         </div>
                         <div class="row-card">
                             <div class="ilustrtion">
-                                <svg width="54" height="54" viewBox="0 0 54 54" fill="none">
+                                <svg width="40" height="40" viewBox="0 0 54 54" fill="none">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                         d="M25.329 3.81924C21.364 4.21575 18.1433 6.24478 16.4098 7.97829L16.3097 8.07836L16.1801 8.13508C13.0887 9.48753 11.0455 11.2291 9.74742 13.1316C8.44877 15.035 7.8669 17.1424 7.7661 19.2709C7.57932 23.2152 9.04893 27.1918 10.608 29.8797C11.137 29.4637 11.6847 29.1701 12.1294 28.9615V27.4482C12.1294 27.2934 12.1773 27.1423 12.2667 27.0157L18.2667 18.5157C18.3996 18.3274 18.6118 18.2106 18.8421 18.1992C19.0724 18.1877 19.2952 18.2828 19.4462 18.457C24.7921 24.6255 31.4848 25.5293 37.148 26.2941C38.135 26.4274 39.0908 26.5565 40.0027 26.7084C40.3643 26.7687 40.6294 27.0816 40.6294 27.4482V29.3657C41.4143 29.6345 42.3527 30.2067 43.0601 31.1328C44.2919 29.4426 45.5349 26.5205 45.4421 22.9048C45.3434 19.0552 43.7285 14.3578 38.8491 9.47829C33.9951 4.62431 29.2541 3.42673 25.329 3.81924ZM6.26778 19.2C6.05462 23.7015 7.79458 28.1449 9.52831 30.9993C9.0005 31.7416 8.62939 32.7025 8.62939 33.9482C8.62939 37.103 10.888 38.6515 12.1573 39.3976C12.3333 41.4348 13.1855 44.2481 15.2225 46.6239C17.4264 49.1944 20.9719 51.1982 26.3794 51.1982C31.7869 51.1982 35.3323 49.1944 37.5363 46.6239C39.5426 44.2839 40.3996 41.5195 40.593 39.4903C41.9938 38.91 44.1294 37.3559 44.1294 34.4483C44.1294 33.7388 44.0159 33.1086 43.823 32.5532C43.8739 32.5159 43.9208 32.4715 43.9623 32.4202C45.4848 30.5394 47.0507 27.1172 46.9417 22.8664C46.832 18.5908 45.0303 13.5382 39.9097 8.41763C34.7637 3.27161 29.588 1.88586 25.1798 2.32668C20.8868 2.75598 17.4041 4.90847 15.4504 6.81747C12.211 8.258 9.9692 10.145 8.50834 12.2862C7.02886 14.4547 6.37948 16.8411 6.26778 19.2ZM39.1294 38.9318L39.1294 38.9313V33.1253L37.1294 37.1253V44.6929C38.5095 42.6755 39.0597 40.4621 39.1294 38.9318ZM42.6294 34.4483C42.6294 36.1441 41.588 37.2289 40.6294 37.8016V30.9921C41.5514 31.4808 42.6294 32.568 42.6294 34.4483ZM39.1294 28.0886V29.7712L35.9863 36.0575C33.9841 35.5188 30.0563 34.6982 26.3796 34.6982C22.7129 34.6982 18.7965 35.5143 16.7893 36.0531L13.6294 29.2818V27.6863L18.9514 20.1468C24.5952 26.143 31.5834 27.0724 37.0363 27.7977C37.7636 27.8945 38.4636 27.9876 39.1294 28.0886ZM17.1294 46.4482V37.5149C19.0292 37.0009 22.8495 36.1982 26.3796 36.1982C29.9094 36.1982 33.7295 37.0008 35.6294 37.5148V46.4483L35.6294 46.4552C33.688 48.2954 30.7511 49.6982 26.3794 49.6982C22.0077 49.6982 19.0708 48.2954 17.1294 46.4552L17.1294 46.4482ZM12.1294 37.5923V30.6536C11.1313 31.2425 10.1294 32.206 10.1294 33.9482C10.1294 35.7645 11.1262 36.8644 12.1294 37.5923ZM13.6294 32.8289V38.9316C13.6991 40.4618 14.2492 42.6754 15.6294 44.6929V37.1146L13.6294 32.8289ZM33.2149 41.1192C33.5854 40.934 33.7356 40.4835 33.5503 40.113C33.3651 39.7425 32.9146 39.5923 32.5441 39.7776C31.5814 40.2589 29.5062 41.1984 26.8795 41.1984C25.5624 41.1984 24.2128 40.9622 23.0854 40.6613C21.9428 40.3563 21.0949 40.003 20.7654 39.8053C20.4102 39.5922 19.9495 39.7073 19.7364 40.0625C19.5233 40.4177 19.6385 40.8784 19.9936 41.0915C20.4974 41.3938 21.4996 41.7905 22.6986 42.1105C23.9129 42.4346 25.3966 42.6984 26.8795 42.6984C29.8528 42.6984 32.1776 41.6379 33.2149 41.1192ZM33.2149 45.1192C33.5854 44.934 33.7356 44.4835 33.5503 44.113C33.3651 43.7425 32.9146 43.5923 32.5441 43.7776C31.5814 44.2589 29.5062 45.1984 26.8795 45.1984C25.5624 45.1984 24.2128 44.9622 23.0854 44.6613C21.9428 44.3563 21.0949 44.003 20.7654 43.8053C20.4102 43.5922 19.9495 43.7073 19.7364 44.0625C19.5233 44.4177 19.6385 44.8784 19.9936 45.0915C20.4974 45.3938 21.4996 45.7905 22.6986 46.1105C23.9129 46.4346 25.3966 46.6984 26.8795 46.6984C29.8528 46.6984 32.1776 45.6379 33.2149 45.1192ZM22.3794 30.9482C22.3794 31.7767 21.7078 32.4482 20.8794 32.4482C20.051 32.4482 19.3794 31.7767 19.3794 30.9482C19.3794 30.1198 20.051 29.4482 20.8794 29.4482C21.7078 29.4482 22.3794 30.1198 22.3794 30.9482ZM31.8794 32.4482C32.7078 32.4482 33.3794 31.7767 33.3794 30.9482C33.3794 30.1198 32.7078 29.4482 31.8794 29.4482C31.051 29.4482 30.3794 30.1198 30.3794 30.9482C30.3794 31.7767 31.051 32.4482 31.8794 32.4482Z"
                                         fill="currentColor" />
@@ -206,26 +207,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="card-1">
-                    <div class="title-tab-expand">
-                        <div class="icon non-interactive">
-                            <svg viewBox="0 0 12 12">
-                                <path xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M12 6C12 9.31371 9.31371 12 6 12C2.68629 12 2.34843e-07 9.31371 5.24537e-07 6C-1.39444e-07 2.68629 2.68629 1.39444e-07 6 -5.24537e-07C9.31371 -2.34843e-07 12 2.68629 12 6ZM6 6.25C6.41421 6.25 6.75 6.58579 6.75 7L6.75 9C6.75 9.41421 6.41421 9.75 6 9.75C5.58579 9.75 5.25 9.41421 5.25 9L5.25 7C5.25 6.58579 5.58579 6.25 6 6.25ZM6 5C6.55228 5 7 4.55229 7 4C7 3.44772 6.55228 3 6 3C5.44772 3 5 3.44772 5 4C5 4.55229 5.44771 5 6 5Z" />
-                            </svg>
-                        </div>
-                        <span class="tab">
-                            Thông tin
-                        </span>
-
-                        <div class="icon">
-                            <svg class="icon-svg" viewBox="0 0 16 16">
-                                <path
-                                    d="M3.64645 9.85355C3.45118 9.65829 3.45118 9.34171 3.64645 9.14645L7.64645 5.14645C7.84171 4.95118 8.15829 4.95118 8.35355 5.14645L12.3536 9.14645C12.5488 9.34171 12.5488 9.65829 12.3536 9.85355C12.1583 10.0488 11.8417 10.0488 11.6464 9.85355L8 6.20711L4.35355 9.85355C4.15829 10.0488 3.84171 10.0488 3.64645 9.85355Z" />
-                            </svg>
-                        </div>
-                    </div>
                     <div class="card-3 blue-style">
                         <div class="icon">
                             <svg class="icon-svg" viewBox="0 0 16 16">
@@ -263,6 +244,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="card-1" style="display: none;">
+                    <div class="title-tab-expand">
+                        <div class="icon non-interactive">
+                            <svg viewBox="0 0 12 12">
+                                <path xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M12 6C12 9.31371 9.31371 12 6 12C2.68629 12 2.34843e-07 9.31371 5.24537e-07 6C-1.39444e-07 2.68629 2.68629 1.39444e-07 6 -5.24537e-07C9.31371 -2.34843e-07 12 2.68629 12 6ZM6 6.25C6.41421 6.25 6.75 6.58579 6.75 7L6.75 9C6.75 9.41421 6.41421 9.75 6 9.75C5.58579 9.75 5.25 9.41421 5.25 9L5.25 7C5.25 6.58579 5.58579 6.25 6 6.25ZM6 5C6.55228 5 7 4.55229 7 4C7 3.44772 6.55228 3 6 3C5.44772 3 5 3.44772 5 4C5 4.55229 5.44771 5 6 5Z" />
+                            </svg>
+                        </div>
+                        <span class="tab">
+                            Thông tin
+                        </span>
+
+                        <div class="icon">
+                            <svg class="icon-svg" viewBox="0 0 16 16">
+                                <path
+                                    d="M3.64645 9.85355C3.45118 9.65829 3.45118 9.34171 3.64645 9.14645L7.64645 5.14645C7.84171 4.95118 8.15829 4.95118 8.35355 5.14645L12.3536 9.14645C12.5488 9.34171 12.5488 9.65829 12.3536 9.85355C12.1583 10.0488 11.8417 10.0488 11.6464 9.85355L8 6.20711L4.35355 9.85355C4.15829 10.0488 3.84171 10.0488 3.64645 9.85355Z" />
+                            </svg>
+                        </div>
+                    </div>
+                   
+                </div>
                 <div class="card-1">
                     <div class="title-tab-expand">
                         <div class="icon non-interactive">
@@ -290,8 +292,9 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="chart">
-
+                    <!-- <div class="margin-F"></div> -->
+                    <div class="chart" style="margin-left: -18px; width:calc(100% + 30px);">
+                        <div id="chart"></div>
                     </div>
                 </div>
             </div>
@@ -554,7 +557,7 @@
             </div>
         </div>
     </div>
-    <div class="filter" >
+    <div class="filter">
         <div class="tab-icon-text icon-toggle popup-infor-container active" data-aos="fade-down" data-aos-delay="250">
             <svg class="icon-svg" viewBox="0 0 16 16">
                 <path
@@ -653,7 +656,7 @@
             </div>
         </div>
     </div>
-    <div class="map-control" >
+    <div class="map-control">
         <div class="zoom-control" data-aos="fade-left" data-aos-delay="800">
             <div class="icon">
                 <svg class="icon-svg" viewBox="0 0 16 16">
@@ -739,6 +742,152 @@
             $(".hide-in-searching").removeClass("hide-search");
         });
 
+        var options = {
+
+            chart: {
+                height: '200',
+                type: 'line',
+                toolbar: {
+                    show: false
+                },
+                fontFamily: 'Roboto',
+                fontWeight: '300',
+            },
+
+            stroke: {
+                curve: 'smooth',
+                width: 2
+            },
+            series: [
+                {
+                    name: "AQI",
+                    data: [60, 80, 65, 75, 65]
+                }
+            ],
+            fill: {
+                type: "gradient",
+                gradient: {
+                    shadeIntensity: 1,
+                    type: 'vertical',
+                    colorStops: [
+                        {
+                            offset: 30,
+                            color: "#FF4123",
+                            opacity: 1
+                        },
+                        {
+                            offset: 20,
+                            color: "#F17C00",
+                            opacity: 1
+                        },
+                        {
+                            offset: 60,
+                            color: "#FFD05C",
+                            opacity: 1
+                        },
+                        {
+                            offset: 100,
+                            color: "#00C582",
+                            opacity: 1
+                        }
+                    ]
+                }
+            },
+            grid: {
+                borderColor: '#6D6D6D'
+            },
+            yaxis: {
+                labels: {
+                    align: 'left',
+                },
+                
+            },
+            xaxis: {
+
+                categories: [
+                    "01/05",
+                    "02/05",
+                    "03/05",
+                    "04/05",
+                    "05/05",
+                    "06/05"
+                ],
+                axisBorder: {
+                    show: false
+                },
+                axisTicks: {
+                    show: false
+                },
+                tooltip: {
+                    enabled: false
+                }
+            }
+        };
+
+
+        // var options = {
+        //     grid: {
+        //         strokeDashArray: 0,
+        //         padding: {
+        //             top: -20,
+        //             right: 0,
+        //             bottom: 0,
+        //             left: 10
+        //         }
+        //     },
+        //     legend: {
+        //         show: false
+        //     },
+        //     colors: ['#2A85FF'],
+        //     series: [{
+        //         name: 'AQI',
+        //         data: [20, 130, 80, 50, 170, 80]
+        //     }],
+        //     chart: {
+        //         type: 'line',
+        //         toolbar: {
+        //             show: false
+        //         },
+        //         fontFamily: 'Roboto',
+        //         fontWeight: '400'
+        //     },
+        //     dataLabels: {
+        //         enabled: false
+        //     },
+        //     stroke: {
+        //         curve: 'smooth',
+        //         width: 2
+        //     },
+        //     fill: {
+        //         type: 'gradient',
+        //         gradient: {
+        //             shade: 'dark',
+        //             gradientToColors: ['#FDD835'],
+        //             gradientToColors: ['#FDD835'],
+        //             shadeIntensity: 1,
+        //             type: 'vertical',
+        //             opacityFrom: 1,
+        //             opacityTo: 1,
+        //             stops: [0, 100, 100, 100]
+        //         },
+        //     },
+        //     xaxis: {
+        //         type: 'category',
+        //         categories: ["04/05", "04/05", "04/05", "04/05", "04/05", "04/05"],
+        //         axisBorder: {
+        //             show: false
+        //         },
+        //         axisTicks: {
+        //             show: false
+        //         },
+        //         tooltip: {
+        //             enabled: false
+        //         }
+        //     }
+        // };
+
+        var chart = new ApexCharts(document.querySelector("#chart"), options);
+        chart.render();
 
 
     </script>
