--- a/Index.html
+++ b/Index.html
@@ -59,7 +59,7 @@
                 </svg>
             </div>
         </div>
-        <div class="main-popup active" data-aos="fade-right" data-aos-delay="150">
+        <div class="main-popup active">
             <div class="tab-icon-line">
                 <div id="tab2" class="tab ">
                     <div class="line-transperent"></div>
