--- a/Index.html
+++ b/Index.html
@@ -745,6 +745,7 @@
             </div>
         </div>
     </div>
+    <div class="overlay-bottom"></div>
     <script src="./main.js"></script>
     <script>
         AOS.init();
@@ -944,4 +945,4 @@
 
 </html>
 
-</html>
+</html> 
