--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="main-popup active" data-aos="fade-right" data-aos-delay="200">
             <div class="tab-icon-line">
-                <div id="tab2" class="tab ">
+                <div id="tab2" class="tab active">
                     <div class="line-transperent"></div>
                     <div class="icon">
                         <span class="font-icon-chart"></span>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="line-status"></div>
                 </div>
-                <div id="tab1" class="tab active ">
+                <div id="tab1" class="tab  ">
                     <div class="line-transperent"></div>
                     <div class="icon">
                         <span class="font-icon-location"></span>
@@ -123,9 +123,9 @@
             <div id="content-tab1" class="content-tab">
                 <div class="card-1">
                     <div class="title">Điểm đang chọn </div>
-                    <div class="discription">
+                    <!-- <div class="discription">
                         <div>Lấy từ Trung tâm quan trắc miền bắc</div>
-                    </div>
+                    </div> -->
                     <div class="margin-H"></div>
                     <div class="title-tab-expand">
                         <div class="icon non-interactive">
@@ -332,14 +332,7 @@
                 <div class="card-1 scroll-in-table">
                     <div class="title">
                         <div>Bảng xếp hạng</div>
-                        <div class="icon">
-                            <svg class="icon-svg" viewBox="0 0 16 16">
-                                <path
-                                    d="M7.33333 2.5C4.66396 2.5 2.5 4.66396 2.5 7.33333C2.5 10.0027 4.66396 12.1667 7.33333 12.1667C10.0027 12.1667 12.1667 10.0027 12.1667 7.33333C12.1667 4.66396 10.0027 2.5 7.33333 2.5ZM1.5 7.33333C1.5 4.11167 4.11167 1.5 7.33333 1.5C10.555 1.5 13.1667 4.11167 13.1667 7.33333C13.1667 10.555 10.555 13.1667 7.33333 13.1667C4.11167 13.1667 1.5 10.555 1.5 7.33333Z" />
-                                <path
-                                    d="M10.9799 10.9795C11.1752 10.7842 11.4918 10.7842 11.687 10.9795L13.687 12.9795C13.8823 13.1747 13.8823 13.4913 13.687 13.6866C13.4918 13.8818 13.1752 13.8818 12.9799 13.6866L10.9799 11.6866C10.7847 11.4913 10.7847 11.1747 10.9799 10.9795Z" />
-                            </svg>
-                        </div>
+                        
                     </div>
                     <div class="discription">
                         <div>Địa điểm đã lưu:</div>
@@ -562,7 +555,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="paging">
+                <div class="paging" style="display: none;">
                     <div class="icon">
                         <span class="font-icon-left"></span>
                         <!-- <svg class="icon-svg" viewBox="0 0 18 18" fill="none">
