--- a/Index.html
+++ b/Index.html
@@ -755,22 +755,69 @@
                 </svg> -->
             </div>
         </div>
+        <div class="infor-control" data-aos="fade-left" data-aos-delay="900">
+            <div class="icon">
+                <span class="font-icon-info"></span>
+                <div class="badge"></div>
+            </div>
+        </div>
     </div>
     <div class="time-slider" >
         <div class="slider-container" >
             <div class="play-btn">
                 <div class="icon">
                     <span class="font-icon-play"></span>
-                    <!-- <svg class="icon-svg" viewBox="0 0 16 16">
-                        <path xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" d="M3.25 3.76637C3.25 2.40611 4.73395 1.56591 5.90037 2.26576L12.9567 6.49957C14.0896 7.17928 14.0896 8.82109 12.9567 9.5008L5.90037 13.7346C4.73395 14.4345 3.25 13.5943 3.25 12.234V3.76637ZM5.12862 3.552C4.96199 3.45202 4.75 3.57205 4.75 3.76637V12.234C4.75 12.4283 4.96199 12.5483 5.12863 12.4484L12.185 8.21456C12.3468 8.11746 12.3468 7.88291 12.185 7.78581L5.12862 3.552Z"/>
-                    </svg> -->
                 </div>
             </div>
             <div class="slider">
-
+                <div class="slider-bg"></div>
+                <div class="slider-step">
+                    <!-- Generate HTML here -->
+                    <div class="step">
+                        <div class="line"></div>
+                        <div class="time">07:40</div>
+                    </div>
+                    <div class="step">
+                        <div class="line"></div>
+                        <div class="time">07:40</div>
+                    </div>
+                    <div class="step">
+                        <div class="line"></div>
+                        <div class="time">07:40</div>
+                    </div>
+                    <div class="step">
+                        <div class="line"></div>
+                        <div class="time">07:40</div>
+                    </div>
+                    <div class="step">
+                        <div class="line"></div>
+                        <div class="time">07:40</div>
+                    </div>
+                    <div class="step">
+                        <div class="line"></div>
+                        <div class="time">07:40</div>
+                    </div>
+                    <div class="step">
+                        <div class="line"></div>
+                        <div class="time">07:40</div>
+                    </div>
+                </div>
+                <div class="slider-run">
+                    <div class="point-drag"></div>
+                </div>
             </div>
+            <div class="play-btn">
+                <div class="icon">
+                    <span class="font-icon-left"></span>
+                </div>
+                <div class="time-selected">18:30</div>
+                <div class="icon">
+                    <span class="font-icon-right"></span>
+                </div>
+            </div>
+       
         </div>
-        <div class="note">
+        <div class="note" style="display: none;">
             <div class="note-range">
                 <div class="number">0</div>
                 <div class="color range01"></div>
@@ -847,6 +894,8 @@
             $(".show-in-searching").removeClass("show-search");
             $(".hide-in-searching").removeClass("hide-search");
         });
+
+        // time-slider 
 
         var options = {
 
