--- a/Login.html
+++ b/Login.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <title>Pop</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./Style/main.css" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/library.css" />
+    <link rel="stylesheet" href="./library.css" />
     <link rel="stylesheet" href="/Fonts/stylesheet.css" />
-    <script src="/library.js"></script>
+    <script src="./library.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
